--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
         "sass": "^1.26.5",
         "sass-loader": "7.*",
         "vue": "^2.6.11",
+        "vue-izitoast": "^1.2.1",
         "vue-template-compiler": "^2.6.11"
-    }
+    },
+    "dependencies": {}
 }
